--- a/3DObjectViewer.htm
+++ b/3DObjectViewer.htm
@@ -29,7 +29,7 @@
 				<span id="lengthLabel"></span>:&nbsp;<span id="lengthValue"></span>&nbsp;mm<br />
 				<span id="timeLabel"></span>:&nbsp;<span id="hoursValue"></span>&nbsp;<span id="hoursLabel"></span>&nbsp;<span id="minutesValue"></span>&nbsp;<span id="minutesLabel"></span><br />
 			</div>
-			<div class="container3">
+			<div class="container3 center">
 				<div class="leftitem">
 					<input type="file" id="modelOBJ" onChange="runViewer();" disabled>
 				</div>
